--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
-- name: Home
+- name: Kalvāns
   link: /
-- name: About
-  link: /about.html
 - name: Blog
   link: /blog.html
+- name: About
+  link: /about.html
 
