--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,12 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 permalink: /blog/:title/
 
+markdown: kramdown
+kramdown:
+  syntax_highlighting: rouge
+highlighter: rouge
+
+
 # Build settings
 #theme: minima
 #plugins:
